--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@
 body {
     font-family:'Alegreya';
     font-size:30;
-    background-image: url("Welcometoskyvalley.jpg");
-    color: grey;
+
+    color: black;
     padding-left:20px; 
 }
     
