--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 	src: url("AlegreyaSans-Black.ttf");
 }
 body {
-background-color: blue;
+background-color: powderblue;
     font-family:'Alegreya';
     font-size:30;
     color: black;
