--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'Didot';
-	src: url("ufonts.com_didot.ttf");
+    font-family: 'Georgia';
+	src: url("Georgia.ttf");
 }
 body {
 background-color: lightblue;
-    font-family:'Didot';
+    font-family:'Georgia';
     font-size:30;
     color: black;
     padding-left:20px; 
